Fixed blank white space at bottom of FAQ page

--- a/css/main.css
+++ b/css/main.css
@@ -259,7 +259,7 @@ footer .social-icons p i {
 }
 
 footer .copyright {
-  margin: 20px 0;
+  margin: 40px 0;
 }
 
 
@@ -429,7 +429,7 @@ input[type=button] {
 }
 
 .faq .content-wrapper {
-  margin: 50px 0 0 0;
+  margin: 132px 0;
   display: flex;
   justify-content: center;
   align-items: center;
